New probes and matches for OpenVPN
git-svn-id: https://svn.nmap.org/nmap@35728 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Added new service probes and match lines for OpenVPN on UDP and TCP.
+  [Corentin Delorme]
+
+Nmap 7.11 [2016-03-22]
+
 o [NSE][GH#341] Added support for diffie-hellman-group-exchange-* SSH key
   exchange methods to ssh2.lua, allowing ssh-hostkey to run on servers that
   only support custom Diffie-Hellman groups. [Sergey Khegay]
