Add STARTTLS support for NNTP
git-svn-id: https://svn.nmap.org/nmap@35731 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added STARTTLS support for NNTP [Daniel Miller]
+
 o Added new service probes and match lines for OpenVPN on UDP and TCP.
 
 Nmap 7.11 [2016-03-22]
