Change to smb-os-discovery to enable it to augment SMB version detection. Closes #348
git-svn-id: https://svn.nmap.org/nmap@35751 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Update to enable smb-os-discovery to augment version detection
+  for certain SMB related services using data that the script discovers.
+  [Tom Sellers]
+
 o Improved version detection and descriptions for Microsoft and Samba
   SMB services. Also addresses certain issues with OS identification. 
   [Tom Sellers]
