VNC revamp and extension
git-svn-id: https://svn.nmap.org/nmap@35754 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] More VNC updates: Support for VeNCrypt auth type, output of
+  authentication sub-types in vnc-info, and all zero-authentication types are
+  recognized and reported. [Daniel Miller]
+
 o [NSE] Update to enable smb-os-discovery to augment version detection
   for certain SMB related services using data that the script discovers.
   [Tom Sellers]
