--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added vnc-title for logging in to VNC servers and grabbing the desktop
+  title, geometry, and color depth. [Daniel Miller]
+
 o [NSE] More VNC updates: Support for VeNCrypt auth type, output of
   authentication sub-types in vnc-info, and all zero-authentication types are
   recognized and reported. [Daniel Miller]
