Added support for LDAP over udp to ldap-rootdse.nse. Also added version detection and information extraction to match the new LDAP LDAPSearchReq and LDAPSearchReqUDP probes. Closes #362
git-svn-id: https://svn.nmap.org/nmap@35766 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH362] Added support for LDAP over udp to ldap-rootdse.nse.
+  Also added version detection and information extraction to match the
+  new LDAP LDAPSearchReq and LDAPSearchReqUDP probes. [Tom Sellers]
+
 o [GH#354] Added new version detection Probes for LDAP services, LDAPSearchReq
   and LDAPSearchReqUDP. The second is Microsoft Active Directory specific. The
   Probes will elicit responses from target services that allow better finger
