Fix 'INTERFACES: NONE FOUND' for real. See also: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=821913
git-svn-id: https://svn.nmap.org/nmap@35782 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Changed libdnet-stripped to avoid bailing completely when an interface is
+  encountered with an unsupported hardware address type. Caused "INTERFACES:
+  NONE FOUND!" bugs in Nmap whenever Linux kernel added new hardware address
+  types. [Daniel Miller]
+
 o [NSE][GH362] Added support for LDAP over udp to ldap-rootdse.nse.
   Also added version detection and information extraction to match the
   new LDAP LDAPSearchReq and LDAPSearchReqUDP probes. [Tom Sellers]
