--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#379][NSE] Fix http-iis-short-name-brute to report non vulnerable hosts.
+  Reported by alias1. [Paulino Calderon]
+
 o [GH#283][Nsock] Avoid "unknown protocol:0" debug messages and an "Unknown
   address family 0" crash on Windows and other platforms that do not set the
   src_addr argument to recvfrom for TCP sockets. [Daniel Miller]
